--- a/visu/starter-template.css
+++ b/visu/starter-template.css
@@ -9,8 +9,9 @@ html, body {
 
 .navbar-nav {
   display:table;
-  width:100%;
+  width:75%;
   margin: 0;
+  color: white;
 }
 .navbar-nav > li {
   float:none;
