--- a/visu/starter-template.css
+++ b/visu/starter-template.css
@@ -57,6 +57,8 @@ html, body {
 #graph {
   height: 100%;
   width: 100%;
+  /* background-color: rgb(228, 217, 192); */
+  background-color: rgb(233, 165, 18); 
 }
 
 .node .circle {
