--- a/visu/starter-template.css
+++ b/visu/starter-template.css
@@ -9,7 +9,7 @@ html, body {
 
 .navbar-nav {
   display:table;
-  width:75%;
+  width:79%;
   margin: 0;
   color: white;
 }
@@ -43,14 +43,14 @@ html, body {
   appearance: none;
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: #4CAF50; /* Green background */
+  background: rgb(233, 165, 18); /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: #4CAF50; /* Green background */
+  background: rgb(233, 165, 18); /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
 
