--- a/visu/starter-template.css
+++ b/visu/starter-template.css
@@ -74,6 +74,8 @@ html, body {
 
 footer .container {
   color: white;
-  margin-right: 0.5rem;
+  width: 100%;
+  margin-left: 0.5rem;
+  padding-right: 2rem;
   margin-bottom: 1rem;  
 }
